2004-11-28  James Henstridge  <james@jamesh.id.au>

	* thumbnailer.c (main): use gnome_vfs_make_uri_from_shell_arg() to
	parse the first argument.
	(main): if the glyphs for 'A' and 'a' aren't found, pick some
	other ones so we display something possibly relevant.
	(draw_char): pass in a glyph index rather than a character.

	* font-view.c: apply Federic Zhang <federic.zhang@sun.com>'s patch
	to speed up loading of large (eg. CJK) fonts, plus a few small bug
	fixes.  Fixes bug #142878.
	(set_icon): use gtk_window_set_icon_name() to set the icon.  Also,
	get the correct icon theme object for the window's screen.

2004-11-27  James Henstridge  <james@jamesh.id.au>

	* Makefile.am: get rid of old mime stuff.

	* gnome-font-viewer.desktop.in.in (Exec): add a "%U" to the
	command line, so Nautilus will run gnome-font-viewer for stuff
	under the fonts:/// URI.

	* Makefile.am: fix build rules for Nautilus stuff.

	* fontilus-context-menu.c: convert to a Nautilus extension.

2004-10-14  Jody Goldberg <jody@gnome.org>

	* Release 2.8.1

2004-05-16  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=140342
	* font-view.c (main) : patched to use argv[0] rather than hard coding
	  things.  Additionally marked the string for translation.

2004-04-15  Jody Goldberg <jody@gnome.org>

	* Release 2.6.1

2004-04-01  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.3

2004-03-30  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.1

2004-03-23  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0

2004-03-11  Jody Goldberg <jody@gnome.org>

	* Release 2.5.4

2004-02-16  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=134389
	* Makefile.am : Patch from jmmv@menta.net (Julio M. Merino Vidal)
	  to honour the standard schema install flags.
	  I've extended the patch to support builddir != srcdir too

2004-02-13  Jody Goldberg <jody@gnome.org>

	* Release 2.5.3

2004-02-10  James Henstridge  <james@daa.com.au>
