@@ -3,7 +3,7 @@ Encoding=UTF-8
 _Name=GNOME Font Viewer
 _Comment=The GNOME configuration tool
 Icon=gnome-settings-font
-Exec=gnome-font-viewer %U
+Exec=gnome-font-viewer %u
 Terminal=false
 Type=Application
 StartupNotify=true
